--- a/css/style.css
+++ b/css/style.css
@@ -1,3 +1,15 @@
 .game{
   display:none;
 }
+
+#buttons1{
+  margin-top: 25px;
+}
+
+.row {
+  margin-top: 30px;
+}
+.col-sm-6 {
+  /*border-style: groove;
+  border-width: thin;*/
+}
